# rust-sso-ui-jwt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: style.yml
example/: Cargo.toml
examples/actix-web/: Cargo.toml
examples/actix-web/src/: main.rs
src/: config.rs  lib.rs  log.rs
src/orgs/: mod.rs  orgcode.json  orgcode.rs
src/ticket/: error.rs  handler.rs  mod.rs  payload.rs
src/token/: handler.rs  mod.rs  payload.rs
