[package]
name = "sso-ui-jwt"
version = "0.1.0"
edition = "2021"
authors = ["RISTEK Open Source <team@ristek.cs.ui.ac.id>"]
homepage = "https://github.com/ristekoss/rust-sso-ui-jwt"
repository = "https://github.com/ristekoss/rust-sso-ui-jwt"
license = "MIT"

[workspace]
members = ["example"]

[dependencies]
jsonwebtoken = "8.1.1"
serde_json = "1.0.82"
strong-xml = "0.6.3"

[features]
log = ["dep:env_logger", "dep:log"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.env_logger]
version = "0.9.0"
optional = true

[dependencies.log]
version = "0.4.17"
optional = true

[dependencies.reqwest]
version = "0.11.11"
features = ["json"]

[dependencies.serde]
version = "1.0.140"
features = ["derive"]

[dependencies.tokio]
version = "1.20.1"
features = ["full"]

[dev-dependencies.dotenv]
version = "0.15.0"
