[package]
name = "sso-ui-jwt"
description = "Rust library for JWT utilities from SSO UI"
version = "0.3.0"
edition = "2021"
keywords = ["sso", "jwt", "ristekoss", "ristekcsui", "universitasindonesia"]
authors = ["RISTEK Open Source <team@ristek.cs.ui.ac.id>"]
homepage = "https://github.com/ristekoss/rust-sso-ui-jwt"
repository = "https://github.com/ristekoss/rust-sso-ui-jwt"
documentation = "https://docs.rs/sso-ui-jwt"
readme = "README.md"
license = "MIT"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[workspace]
members = ["examples/*"]

[features]
log = ["dep:log"]

[dependencies]
jsonwebtoken = "8.1.1"
serde_json = "1.0.82"
strong-xml = "0.6.3"

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.log]
version = "0.4.17"
optional = true

[dependencies.reqwest]
version = "0.11.11"
features = ["json"]

[dependencies.serde]
version = "1.0.140"
features = ["derive"]

[dependencies.tokio]
version = "1.20.1"
features = ["rt-multi-thread", "macros"]
